# sel4-riscv-mcs-sample

./: CMakeLists.txt  Earthfile  README.md  settings.cmake
app/: CMakeLists.txt  main.c
scripts/docker/riscv-gnu-toolchain/: Dockerfile
